这个是一个登陆实现了

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,7 @@
          <ul>
            <h3 style="color:#FFF;">栏目分类</h3>
            <a href="#" class="net"><li>申请订票</li></a>
-           <a href="#" class="_all2"><li>火车时刻表</li></a>
+           <a href="/huochepiao.html" class="_all2"><li>火车时刻表</li></a>
            <a href="/userinfo.html" class="_all3"><li>我的火车票</li></a>
            <a href="#" class="_all4"><li>修改密码</li></a>
            <a href="#" class="_all5"><li>联系我们</li></a>
