用户详情信息上传!!!

--- a/src/main/webapp/userinfo.html
+++ b/src/main/webapp/userinfo.html
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="description">
                                     <p>
-                                        这里面可以显示一些积分信息等
+                                        这里面可以显示一些.积分信息等
                                     </p>
                                 </div>
                             </div>
