实现修改密码功能

--- a/src/main/webapp/userinfo.html
+++ b/src/main/webapp/userinfo.html
@@ -32,8 +32,9 @@
                                       常用联系人
                                     </span>
                                     <span class="right floated star">
-                                      <i class="pencil alternate icon"></i>
-                                      修改密码
+                                      <i class="pencil alternate icon">
+                                          <a href="/xiugaimima.html">修改密码</a>
+                                      </i>
                                     </span>
                             </div>
                         </div>
