--- a/src/main/webapp/yuding.html
+++ b/src/main/webapp/yuding.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/home.css"/>
-    <script src="js/yuding.js"></script>
+<!--    <script src="js/yuding.js"></script>-->
+    <script type="text/javascript" src="js/jquery_3.1.1.js"></script>
 </head>
 <body>
 <div class="middle">
@@ -12,7 +13,7 @@
         <div class="class_a">
             <div class="all1">
                 <h4 style="color:#fff">申请订票</h4>
-                <form runat="server" method="get" action="">
+                <form runat="server"  >
                     <table width="800" height="300" style="margin:auto; margin-top:50px; border:1px solid #FFF;"
                            border="1" cellpadding="0" cellspacing="0">
                         <tr>
@@ -59,14 +60,15 @@
                                           name="" cols="0" rows="0"></textarea></td>
                         </tr>
                     </table>
-                    <div class="tom" style="margin-top:20px;">
-                        <input name="clear" style="width:80px; height:30px;" type="reset" value="清空"/>
 
-                        <input id="play" style="width:80px; height:30px; " type="submit" value="预定"/>
-
-                    </div>
-                    <span style="float:right;">注：标注*为必填项！</span>
                 </form>
+                <div class="tom" style="margin-top:20px;">
+                    <input name="clear" style="width:80px; height:30px;" type="reset" value="清空"/>
+
+                    <input id="play" style="width:80px; height:30px;" type="button" value="预定"/>
+
+                </div>
+                <span style="float:right;">注：标注*为必填项！</span>
             </div>
         </div>
     </div>
@@ -88,13 +90,15 @@
         var daoshi = $("#daoshi").val();
         var leixing = $("#leixing").val();
         var beizhu = $("#beizhu").val();
+        var userId = "aaaa1111"
 
         var myjson = {name:name, shenfenzheng:shenfenzheng, userphone:userphone, jiage:jiage,
             checi:checi, fazhan:fazhan, daozhan:daozhan, fashi:fashi, daoshi:daoshi, leixing:leixing,
-            beizhu:beizhu}
+            beizhu:beizhu, userId:userId};
 
+        console.log(myjson);
         $.ajax({
-            url: "/islogin",   // 请求路径  url-pattern  基于当前工程的绝对路径
+            url: "/yudingchepiao",   // 请求路径  url-pattern  基于当前工程的绝对路径
             type: "post",            // 请求的方式，不区分大小写
             async: true,             // 是否异步，true是默认值，false为同步请求
             cache: false,            // 关闭缓存，目的是为了避免部分浏览器缓存加载出错(IE)
@@ -103,12 +107,7 @@
             data: JSON.stringify(myjson),
             success: function (data) {
                 console.log(data)
-                if(data.code == 200){
-                    alert(data.msg);
-                    window.location="index.html";<!--js页面跳转-->
-                }else {
-                    alert(data.msg);
-                }
+
             },
             error: function (data) {
                 alert(data.msg)
